--- a/index.css
+++ b/index.css
@@ -74,7 +74,7 @@ ul li::before {
     height: 28px;
     width: 28px;
     border-radius: 50%;
-    background-image: url(../images/unchecked.png);
+    background-image: url(images/unchecked.png);
     background-size: cover;
     background-position: center;
     top: 12px;
@@ -87,7 +87,7 @@ ul li.checked{
 }
 
 ul li.checked::before{
-    background-image: url(../images/checked.png);
+    background-image: url(images/checked.png);
 }
 
 ul li span {
